--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -73,6 +73,22 @@
                         android:textColor="@color/black"
                         android:text="123-456-7890" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:layout_marginTop="20dp">
+                    <Button
+                        android:id="@+id/btnAddFriend"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add"
+                        android:textSize="10dp"
+                        android:drawableLeft="@drawable/baseline_person_add_24">
+                    </Button>
+
+                </LinearLayout>
             </LinearLayout>
 
             <EditText
